# Arduino-nrf9160dk

./: .gitignore  .gitmodules  Maintenance.md  README.md  RELEASES.md  env.sh  local_copy.sh  local_install.sh  makefile  mk_dist.sh  mk_package.sh  mk_tool_links.bat  package_bosl_nrf9160dk_index.json  package_bosl_nrf9160dk_index.json.template  prepare_packgage.sh  publish.bat  setup.sh  version.def
arduino_samples/: makefile
arduino_samples/blinky/: blinky.ino
arduino_samples/modem_at_client/: modem_at_client.ino
arduino_samples/modem_at_monitor/: modem_at_monitor.ino
arduino_samples/modem_http/: modem_http.ino
bosl/hardware/nrf9160/1.0.0/: boards.txt  platform.txt
sample_zephyr_project/: CMakeLists.txt  build.sh  prj.conf
templates/: boards.txt  debug_custom.json  package_bosl_nrf9160dk_index.json.template  platform.txt
templates/cores/zephyr/: Dummy.cpp
test/: build.sh  setup.sh
zephyr_samples/: makefile
zephyr_samples/at_client/: CMakeLists.txt  at_client.cpp  makefile  prj.conf
zephyr_samples/at_client/commands/: compile.sh  link_at_client.ninja  link_at_client.sh  my_link.sh  zephyr_final.rsp  zephyr_pre0.rsp
zephyr_samples/blinky/: CMakeLists.txt  blinky.cpp  makefile
